applications/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: readarr
  name: readarr
spec:
  ports:
    - name: "8787"
      port: 8787
      targetPort: 8787
  selector:
    app: readarr
status:
  loadBalancer: {}
