applications/readarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("readarr.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: readarr
          port: 8787
